--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,52 @@
     margin: 0;
 }
 
+body {
+    background-color: white;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.6;
+    color: black;
+}
+
+header {
+    display: flex;
+    align-items: center;
+}
+
+header .header__item {
+    object-fit: contain;
+    padding: 20px;
+}
+
+header .search-bar {
+    flex-grow: 1;
+    text-align: right;
+}
+
+.main-content {
+    width: 90%;
+    max-width: 300px;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.main-content .pokemon-list {
+    text-align: left;
+    list-style-type: none;
+}
+
+.pokemon-list .pokemon-list__item {
+    background-color: #b1b1b1;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
+.pokemon-list__item__button {
+    border: none;
+    padding: 0;
+    color: inherit;
+    background: none;
+    font: inherit;
+}
