--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: white;
+    background-color: #e2e2e2;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -35,18 +35,18 @@ header .search-bar {
     text-align: left;
 }
 
-.main-content .pokemon-list {
+.main-content .item-list {
     text-align: left;
     list-style-type: none;
 }
 
-.pokemon-list .pokemon-list__item {
+.item-list .item-list__item {
     background-color: #b1b1b1;
     margin-bottom: 5px;
     padding: 5px;
 }
 
-.pokemon-list__item__button {
+.item-list__item__button {
     border: none;
     padding: 0;
     color: inherit;
